[gd_scene load_steps=2 format=3 uid="uid://charselect001"]

[ext_resource type="Script" path="res://scripts/ui/character_select.gd" id="1_select"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_select")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 30.0
text = "SELECT FIGHTER"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="FighterList" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="StatsPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="HBoxContainer/StatsPanel"]
layout_mode = 2
text = "Fighter Name"

[node name="DescLabel" type="Label" parent="HBoxContainer/StatsPanel"]
layout_mode = 2
text = "Description"

[node name="Separator" type="HSeparator" parent="HBoxContainer/StatsPanel"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="HBoxContainer/StatsPanel"]
layout_mode = 2
text = "STR: 5  AGI: 5
VIT: 5  TEC: 5
WIL: 5  INT: 5"

[node name="Spacer" type="Control" parent="HBoxContainer/StatsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartBtn" type="Button" parent="HBoxContainer/StatsPanel"]
layout_mode = 2
text = "START RUN"

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 190.0
offset_right = 60.0
offset_bottom = 210.0
text = "BACK"
